# banking-system

./: CMakeLists.txt
include/: Account.hpp  Person.hpp  Utils.hpp
src/: Account.cpp  Person.cpp  Utils.cpp  main.cpp  unit_tests.cpp
